--- a/src/styles.css
+++ b/src/styles.css
@@ -62,3 +62,27 @@
 .cdk-drag-animating {
   transition: transform 100ms cubic-bezier(0, 0, 0.2, 1);
 }
+
+.border-top{
+margin-top:'1000px';
+padding-top:'1000px';
+
+}
+.border-right{
+margin-right:'1000px';
+padding-right:'1000px';
+
+}
+.border-left{
+margin-left:'1000px';
+padding-left:'1000px';
+
+}
+.border-bottom{
+margin-bottom:'1000px';
+padding-bottom:'1000px';
+
+}
+connection{
+      border-radius: 10em;
+}
